--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,14 @@
             android:name=".HomeScreen"
             android:label="@string/title_activity_home_screen" >
         </activity>
+        <activity
+            android:name=".IntroScreen"
+            android:label="@string/title_activity_intro_screen" >
+        </activity>
+        <activity
+            android:name=".MakeAccount"
+            android:label="@string/title_activity_make_account" >
+        </activity>
     </application>
 
 </manifest>
