Added end task screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name=".activity_screen"
             android:label="@string/title_activity_activity_screen" >
         </activity>
+        <activity
+            android:name=".EndTask"
+            android:label="@string/title_activity_end_task" >
+        </activity>
     </application>
 
 </manifest>
