--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".EndTask"
             android:label="@string/title_activity_end_task" >
         </activity>
+        <activity
+            android:name=".ResultsScreen"
+            android:label="@string/title_activity_results_screen" >
+        </activity>
     </application>
 
 </manifest>
