--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
             android:name=".ResultsScreen"
             android:label="@string/title_activity_results_screen" >
         </activity>
+        <activity
+            android:name=".TaskInstructions"
+            android:label="@string/title_activity_task_instruction" >
+        </activity>
     </application>
 
 </manifest>
