--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity
             android:name=".IntroScreen"
+            android:screenOrientation="sensorPortrait"
             android:label="@string/title_activity_intro_screen" >
         </activity>
         <activity
@@ -32,18 +33,22 @@
         </activity>
         <activity
             android:name=".activity_screen"
+            android:screenOrientation="sensorPortrait"
             android:label="@string/title_activity_activity_screen" >
         </activity>
         <activity
             android:name=".EndTask"
+            android:screenOrientation="sensorPortrait"
             android:label="@string/title_activity_end_task" >
         </activity>
         <activity
             android:name=".TaskInstructions"
+            android:screenOrientation="sensorPortrait"
             android:label="@string/title_activity_task_instruction" >
         </activity>
         <activity
             android:name=".ResultsScreen"
+            android:screenOrientation="sensorPortrait"
             android:label="@string/title_activity_results_screen" >
         </activity>
     </application>
