--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
         </activity>
         <activity
             android:name=".IntroScreen"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_intro_screen" >
+            android:label="@string/title_activity_intro_screen"
+            android:screenOrientation="sensorPortrait" >
         </activity>
         <activity
             android:name=".MakeAccount"
@@ -33,23 +33,27 @@
         </activity>
         <activity
             android:name=".activity_screen"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_activity_screen" >
+            android:label="@string/title_activity_activity_screen"
+            android:screenOrientation="sensorPortrait" >
         </activity>
         <activity
             android:name=".EndTask"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_end_task" >
+            android:label="@string/title_activity_end_task"
+            android:screenOrientation="sensorPortrait" >
         </activity>
         <activity
             android:name=".TaskInstructions"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_task_instruction" >
+            android:label="@string/title_activity_task_instruction"
+            android:screenOrientation="sensorPortrait" >
         </activity>
         <activity
             android:name=".ResultsScreen"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_results_screen" >
+            android:label="@string/title_activity_results_screen"
+            android:screenOrientation="sensorPortrait" >
+        </activity>
+        <activity
+            android:name=".StruggleQuestionScreen"
+            android:label="@string/title_activity_struggle_question_screen" >
         </activity>
     </application>
 
