About screen, navbar fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@style/Theme.Jmaketheme" >
         <activity
             android:name=".SplashScreen"
@@ -25,8 +25,8 @@
         </activity>
         <activity
             android:name=".IntroScreen"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_intro_screen" >
+            android:label="@string/title_activity_intro_screen"
+            android:screenOrientation="sensorPortrait" >
         </activity>
         <activity
             android:name=".MakeAccount"
@@ -34,23 +34,27 @@
         </activity>
         <activity
             android:name=".activity_screen"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_activity_screen" >
+            android:label="@string/title_activity_activity_screen"
+            android:screenOrientation="sensorPortrait" >
         </activity>
         <activity
             android:name=".EndTask"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_end_task" >
+            android:label="@string/title_activity_end_task"
+            android:screenOrientation="sensorPortrait" >
         </activity>
         <activity
             android:name=".TaskInstructions"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_task_instruction" >
+            android:label="@string/title_activity_task_instruction"
+            android:screenOrientation="sensorPortrait" >
         </activity>
         <activity
             android:name=".ResultsScreen"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/title_activity_results_screen" >
+            android:label="@string/title_activity_results_screen"
+            android:screenOrientation="sensorPortrait" >
+        </activity>
+        <activity
+            android:name=".AboutScreen"
+            android:label="@string/title_activity_about_screen" >
         </activity>
     </application>
 
