--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@style/Theme.Jmaketheme" >
         <activity
             android:name=".SplashScreen"
@@ -55,6 +55,10 @@
         <activity
             android:name=".StruggleQuestionScreen"
             android:label="@string/title_activity_struggle_question_screen" >
+        </activity>
+        <activity
+            android:name=".IntroductionScreen"
+            android:label="@string/title_activity_introduction_screen" >
         </activity>
     </application>
 
