--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
             android:name=".IntroductionScreen"
             android:label="@string/title_activity_introduction_screen" >
         </activity>
+        <activity
+            android:name=".OptionsScreen"
+            android:label="@string/title_activity_options_screen" >
+        </activity>
     </application>
 
 </manifest>
