--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,14 @@
             android:name=".OptionsScreen"
             android:label="@string/title_activity_options_screen" >
         </activity>
+        <activity
+            android:name=".UserScreen"
+            android:label="@string/title_activity_user_screen" >
+        </activity>
+        <activity
+            android:name=".AccountScreen"
+            android:label="@string/title_activity_account_screen" >
+        </activity>
     </application>
 
 </manifest>
